# JadeAgent

./: README.md  isolenas.txt  pyproject.toml
JadeAgent/: README.md
JadeScholar/: scholar_graph.py
benchmarks/: challenge_compare.py  durable_compare.py  langgraph_compare.py  portfolio_overview.py  quality_compare.py
code_jade/: config.json  core.py  main.py  reviewer.py  tools.py
docs/: architecture.md  benchmark-overview.md  challenge-benchmark.md  comparison.md  governance.md  jadeagent-scale-v2.md  jgx-crash-recovery-results.md  jgx-eval-metrics.md  jgx-eval-report.md  jgx-mesh-code-project-results.md  jgx-state-capsules.md  jgx-workflow-results.md  langgraph-colab-benchmark-results.md  langgraph-colab-benchmark.md  langgraph-durable-benchmark.md  mesh-runtime.md  quality-benchmark.md
examples/: compound_ai.py  e2b_smoke_test.py  jgx_crash_recovery.py  jgx_mesh_code_project.py  mesh_agent_network.py  mesh_simulation.py  mission_mcp_sim.py  redis_agent_coordinator.py  redis_agent_node.py  redis_sandbox_submit.py  redis_sandbox_worker.py  redis_secure_mesh_demo.py  redis_submit_task.py  redis_worker_node.py  simple_chat.py  swarm_sim.py  test_mcp_server.py
jade/: CEL.txt  config.json  core.py  handlers.py  requirements.txt
jade3/: config.json  core.py  curator_heuristic.py  handlers.py  main.py  requirements.txt  shorestone.py  tts.py  utils.py
jadeagent/: __init__.py  a2a.py  cli.py  eval.py  governance.py
tests/: test_async_runtime.py  test_challenge_benchmark.py  test_durable_compare.py  test_eval_cli.py  test_governance.py  test_lease_wheel.py  (+7 more)
(+75 files in other folders)
