[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jadeagent"
version = "0.1.0"
description = "JadeAgent — Next-Gen Agent Framework powered by MegaGemm"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Gabriel Yogi"},
]

dependencies = [
    "openai>=1.0",       # OpenAI-compatible API client
]

[project.optional-dependencies]
local = [
    "megagemm",          # Local GPU inference
]
memory = [
    "chromadb>=0.4",
    "sentence-transformers>=2.0",
]
all = [
    "megagemm",
    "chromadb>=0.4",
    "sentence-transformers>=2.0",
]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["jadeagent*"]
